# texas-holdem

./: LICENSE  README.md  deck.py  main.py  player.py  pyproject.toml
